--- a/Back/static/css/estilos.css
+++ b/Back/static/css/estilos.css
@@ -21,7 +21,7 @@ body {
 
 /*Características del Encabezado de la Página*/
 header {
-	background: #75d2b2;
+	background: #6fa8aa;
 	width: 100%;
 	margin: auto;
 	display: flex;
@@ -61,32 +61,29 @@ header .logo a {
 /*Características visuales del Menú de la Página*/
 .menu a {
 	/*Poner el borde de los botones en blanco con border-buttom*/
-	border-bottom: #75d2b2 2px solid;
-	background: #66CDAA;
+	border-bottom: #6fa8aa 2px solid;
+	background: #5F9EA0;
 	color: #fff;
 	text-align: center;
 	text-decoration: none;
 	padding: 10px;
+	font-family: Arial, Helvetica, sans-serif;
 
 	/* Flexbox */
 	flex-grow: 1; /*Especifica el numero maximo de items flex que pueden adecuarse en una zona*/
 }
 
-.Bienvenido{
-	text-align: end;
-}
-
 /*Código Para dar las Características al Contenedor del Carrusel*/
 .carrusel {
 	padding-top: 5px;
-	background: #75d2b2;
+	background: #6fa8aa;
 	width: 100%;
 }
 
 /*Código para centrar redes sociales*/
 .social {
 	margin: auto;
-	background: #75d2b2;
+	background: #5f9ea0;
 	padding: 5px;
 	width: 100%;	
 	text-align: center;
@@ -100,7 +97,7 @@ header .logo a {
 
 /*Código Para Cambiar el Cursor las Redes Sociales*/
 .social:hover {
-    cursor:pointer;
+	cursor:pointer;
 }
 
 div .links a {
@@ -114,7 +111,7 @@ div .links a {
 /*Código Para Dar Tamaño y Orden a los Enlaces de las Redes Sociales*/
 .fab {
 	text-align: center;
-	color: #66CDAA;
+	color: #5f9ea0;
 	width: 50px;
     height: 50px;
 	padding: 12px;
@@ -122,12 +119,13 @@ div .links a {
 	font-size: 24px;
 	padding-left: 14px;
 	text-decoration: none;
+	box-shadow: 5px 5px 8px #A9A9A9;
 }
 
 /*Código Para Dar Tamaño y Orden al Enlace del Correo Eléctronico*/
 .far {
 	text-align: center;
-	color: #66CDAA;
+	color: #5f9ea0;
 	width: 50px;
     height: 50px;
 	padding: 17px;
@@ -135,6 +133,7 @@ div .links a {
 	font-size: 20px;
 	padding-left: 16px;
 	text-decoration: none;
+	box-shadow: 5px 5px 8px #A9A9A9;
 }
 
 /*Códigos Para Dar Tamaño y Orden a las Redes Sociales*/
@@ -325,7 +324,7 @@ div .links a {
 .contenedorCollage {
 	width: 100%;
 	display:flex;
-	background: #75d2b2;
+	background: #5f9ea0;
 	margin-top: 20px;
 }
 
@@ -403,29 +402,24 @@ div .links a {
 
 /*Código para darle estilos al texto de "olvidaste tú contraseña"*/
 .contraseña{
+	margin-left: 20px;
 	font-family: Helvetica Narrow, sans-serif;
 	font-size: 12px;
-	margin-top: 3px;
-	font-weight: bold;
-	text-align: right;
-	margin-right: 35px;
+	color: #2F4F4F;
+	margin-bottom: 3px;
 }
 
-/*Código para darle estilos al texto de recuperación de contraseña*/
 .recupera{
+	margin-right: 20px;
 	font-family: Helvetica Narrow, sans-serif;
-	color: blue;
 	font-size: 12px;
-	margin-top: 5px;
-	margin-bottom: 10px;
-	text-align: right;
-	margin-right: 40px;
+	color: #5F9EA0;
+	margin-bottom: 3px;
+	font-weight: bold;
 	cursor: pointer;
 }
 
 /*Código para controlar los input*/
-
-
 li label{
 	margin-left: 20px;
 }
@@ -439,8 +433,9 @@ li label{
 /*Código para darle estilos al botón de iniciar sesión*/
 .btnEnviar{
 	margin: auto;
-	background: #66CDAA;
-	color: #fff;
+	margin-bottom: 20px;
+	background: #5F9EA0;
+	color: #F0F8FF;
 	border: none;
     padding: 5px 15px;
     text-align: center;
@@ -449,13 +444,54 @@ li label{
 	cursor: pointer;
 	display: flex;
 	flex-wrap: wrap;
+	border-radius: 8px;
+	font-weight: bold;
+}
+
+.btnSocial{
+	margin: auto;
+	background: #5F9EA0;
+	color: #F0F8FF;
+	border: none;
+    padding: 5px 15px;
+    text-align: center;
+	text-decoration: none;
+	padding-left: 50px;
+	cursor: pointer;
+	display: flex;
+	flex-wrap: wrap;
+	border-radius: 8px;
+	font-weight: bold;
+	font-size: 15px;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.iniciarSesion{
+	margin-top: 15px;
+	width: 140px;
+	margin: auto;
+	color: #5F9EA0;
+	border: none;
+    padding: 5px 15px;
+	text-align: center; 
+	text-decoration: underline #5F9EA0;
+	font-size: 15px;
+	cursor: pointer;
+	font-weight: bold;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.gitlogo{
+	margin-right: 5px;
+	width: 18px;
+	height: 18px;
 }
 
 /*Código para darle estilos al botón de confirmar*/
 .btnConfirmar{
 	margin: auto;
-	background: #66CDAA;
-	color: #fff;
+	background: #5F9EA0;
+	color: white;
 	border: none;
 	margin-top: 15px;
     padding: 5px 15px;
@@ -465,14 +501,15 @@ li label{
 	cursor: pointer;
 	display: flex;
 	flex-wrap: wrap;
+	border-radius: 8px;
 }
 
 /*Código para centrar el formulario de login*/
 .login {
 	width: 100%;
 	padding: 5px;
-	padding-top: 85px;
-	padding-bottom: 140px;
+	padding-top: 50px;
+	padding-bottom: 98px;
 	
 	/*Flexbox*/
 	display: flex;
@@ -483,27 +520,23 @@ li label{
 /*Código para centrar contenido del formulario login*/
 .loginContenedor{
 	padding-bottom: 10px;
-	margin: auto;
-	border: 4px solid #66CDAA;	
+	margin: auto;	
 	text-align: center;
+	align-items: center;
 }
 
 .usuario{
-	text-align: end;
-	margin-left: 20px;
+	padding-bottom: 5px;
 }
 
 .usuario input{
-	width: 100px;
-	margin-right: 20px;
+	width: 180px;
+	color: #008B8B;
+	padding: 5px;
+	margin-left: 45px;
+	margin-block-start: 5px;
+	border: 1px solid #5F9EA0;
 }
-
-.usuario label{
-	width: 100px;
-	margin-left: 20px;
-}
-
-.loginContenedor
 
 /*Código para el texto de acceder*/
 .acceso{
@@ -511,13 +544,10 @@ li label{
 	font-family: Helvetica Narrow, sans-serif;
 	font-size: 25px;
 	padding-top: 10px;
-	padding-bottom: 10px;
-	padding-right: 15px;
-	margin-bottom: 20px;
+	margin-bottom: 10px;
 	text-align: center;
 	font-weight: bold;
-	color: #fff;
-	background: #66CDAA;
+	color: #5F9EA0;
 }
 
 .editarMascotas{
@@ -530,8 +560,7 @@ li label{
 	margin-bottom: 20px;
 	text-align: center;
 	font-weight: bold;
-	color: #fff;
-	background: #66CDAA;
+	color: #5F9EA0;
 }
 
 .formRegistro{
@@ -544,11 +573,10 @@ li label{
 	margin-bottom: 20px;
 	text-align: center;
 	font-weight: bold;
-	color: #fff;
-	background: #66CDAA;
+	color: #5F9EA0;
 }
 
-.formRegistrMascota{
+.formRegistroMascota{
 	width:100%;
 	font-family: Helvetica Narrow, sans-serif;
 	font-size: 25px;
@@ -558,8 +586,7 @@ li label{
 	margin-bottom: 20px;
 	text-align: center;
 	font-weight: bold;
-	color: #fff;
-	background: #66CDAA;
+	color: #5F9EA0;
 }
 
 /*Código para centrar el formulario de registro*/
@@ -567,7 +594,6 @@ li label{
 	width: 100%;
 	padding-top: 20px;
 	padding-bottom: 20px;
-	align-items: left;
 
 	/*Flexbox*/
 	display: flex;
@@ -578,71 +604,48 @@ li label{
 .registroContenedor{
 	padding-bottom: 15px;
 	margin: auto;
-	border: 4px solid #66CDAA;
-	width: 600px;
-	text-align: center;
+	width: 100%;
 }
 
 .registroExitoso{
 	padding-top: 20px;
 	padding-left: 20px;
+	margin-bottom: 10px;
 	font-family: Helvetica Narrow, sans-serif;
 	text-align: center;
 	font-weight: bold;
+	color: #2F4F4F;
 }
 
 /*Código para darle estilos al texto registrarse*/
 .registrate{
 	font-family: Helvetica Narrow, sans-serif;
-	color: blue;
-	font-size: 12px;
-	margin-top: 5px;
+	color: #5F9EA0;
+	font-size: 14px;
 	margin: auto;
 	cursor: pointer;
 	text-decoration: none;
 	text-align: center;
+	font-weight: bold;
+	text-decoration: underline #5F9EA0;
 }
 
-.iniciarSesion{
-	font-family: Helvetica Narrow, sans-serif;
-	color: blue;
-	font-size: 12px;
-	margin-top: 5px;
-	margin: auto;
-	cursor: pointer;
-	text-decoration: none;
-}
+
 
 .registrado{
 	width:100%;
 	margin-bottom: 350px;
 	text-align: center;
-}
-
-.registro li{
-	padding: 4px;
-	font-family: Helvetica Narrow, sans-serif;
-	list-style: none;
-	text-align: left;
-	margin-left: 70px;
-}
-
-/*Código para los datos del formulario, "usuario", "contraseña"*/
-.login li{
-	padding: 4px;
-	width: 100%;
-	text-align: end;
-	font-family: Helvetica Narrow, sans-serif;
-	list-style: none;
+	font-weight: bold;
 }
 
 .bienvenido{
 	width: 100%;
-	background: #75d2b2;
+	background: #6fa8aa;;
 	color: #fff;
 	text-align: right;
 	text-decoration: none;
-	padding: 5px;
+	padding-right: 15px;
 }
 
 .user{
@@ -650,7 +653,6 @@ li label{
 	text-decoration: none;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 15px;
-	padding-right: 15px;
 }
 
 .usuario{
@@ -696,7 +698,6 @@ li label{
 	margin: auto;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	border: 4px solid #66CDAA;
 	width: 500px;
 }
 
@@ -704,7 +705,7 @@ li label{
 	text-decoration: none;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	text-align: end;
-	padding:2px;
+	padding: 2px;
    	margin: 0 auto;
 	margin-left: 80px;
 }
@@ -712,12 +713,37 @@ li label{
 .RegistroAdoptante{
 	text-decoration: none;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
-	text-align: end;
-	padding:2px;
+	color:#008080;
+	text-align: left;
    	margin: 0 auto;
-	margin-left: 100px;
+	font-size: 12px;
 }
 
+.RegistroAdoptante input{
+	width: 180px;
+	padding: 5px;
+	margin-top: 4px;
+	color: #008B8B;	
+	border: 1px solid #5F9EA0;
+	margin-bottom: 2px;
+}
+
+.fecha{
+	margin-top: 3px;
+	margin-left: 2px;
+}
+
+::placeholder{
+	color: #008B8B;	
+}
+
+.RegistroAdoptante select{
+	width: 180px;
+	padding: 5px;
+	margin-top: 4px;
+	color: #008B8B;
+	border: 1px solid #5F9EA0;
+}
 
 .Inputs input{
 	margin-right: 130px;
@@ -731,29 +757,9 @@ li label{
 	margin-right: 135px;
 }
 
-.inputRegistro input{
-	margin-right: 33px;
-}
-
-.selectFecha select{
-	margin-right: 6.6px;
-}
-
-.selectRegion select{
-	margin-right: 55px;
-}
-
-.selectCiudad select{
-	margin-right: 129px;
-}
-
-.selectVivienda select{
-	margin-right: 59px;
-}
-
 .imgMascota{
-	width: 200px;
-	height: 150px;
+	width: 180px;
+	height: 180px;
 }
 
 .imgMascotaEditar{
@@ -763,7 +769,7 @@ li label{
 }
 
 .mascotasLista{
-	width: 270px;
+	width: 250px;
 	padding: 5px;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	list-style: none;
@@ -780,24 +786,21 @@ li label{
 
 .mascotasMuestra{
 	padding: 15px;
-	border: 4px solid #66CDAA;
-	width: 260px;
+	border: 4px solid #5F9EA0;
 	text-align: center;
-	flex-grow: 3;
+	flex-grow: 1;
 	list-style: none;
-	margin-left: 90px;
 }
 
 .nomMascota{
-	width: 260px;
+	width: 240px;
 	padding-top: 5px;
-	margin-left: 90px;
 	font-family: Helvetica Narrow, sans-serif;
 	font-size: 25px;
 	text-align: center;
 	font-weight: bold;
 	color: #fff;
-	background: #66CDAA;
+	background: #5F9EA0;
 }
 
 .pagination{
@@ -808,7 +811,7 @@ li label{
 	font-family: Helvetica Narrow, sans-serif;
 	font-size: 20px;
 	color: #fff;
-	background: #75d2b2;
+	background: #5F9EA0;
 	padding-top: 20px;
 	padding-bottom: 20px;
 }
@@ -835,11 +838,11 @@ li label{
 	text-align: center;
 	font-weight: bold;
 	color: #fff;
-	background: #75d2b2;
+	background: #5F9EA0;
 }
 
 .btnOpcionSi{
-	background: #0d3d6e;
+	background: #5F9EA0;
 	font-family: Helvetica Narrow, sans-serif;
 	color: #fff;
 	border: none;
@@ -847,10 +850,11 @@ li label{
     text-decoration: none;
 	font-size: 13px;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .btnOpcionNo{
-	background: grey;
+	background: #778899;
 	font-family: Helvetica Narrow, sans-serif;
 	color: #fff;
 	border: none;
@@ -858,10 +862,11 @@ li label{
     text-decoration: none;
 	font-size: 13px;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .btnEditar{
-	background: #0d3d6e;
+	background: #5F9EA0;
 	font-family: Helvetica Narrow, sans-serif;
 	color: #fff;
 	border: none;
@@ -869,11 +874,12 @@ li label{
     text-decoration: none;
 	font-size: 13px;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .btnEliminar{
-	background: grey;
-	
+	background: #778899;
+	border-radius: 8px;
 	color: #fff;
 	border: none;
     padding: 5px 15px;
@@ -886,7 +892,7 @@ li label{
 	margin: auto;
 	display: flex;
 	flex-wrap: wrap;
-	background: #0d3d6e;
+	background: #5F9EA0;
 	margin-top: 10px;
 	font-family: Helvetica Narrow, sans-serif;
 	color: #fff;
@@ -895,13 +901,14 @@ li label{
     text-decoration: none;
 	font-size: 15px;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .btnCancelar{
 	margin: auto;
 	display: flex;
 	flex-wrap: wrap;
-	background: grey;
+	background: #778899;
 	margin-top: 10px;
 	font-family: Helvetica Narrow, sans-serif;
 	color: #fff;
@@ -910,6 +917,7 @@ li label{
     text-decoration: none;
 	font-size: 15px;
 	cursor: pointer;
+	border-radius: 8px;
 }
 
 .eliminar{
