--- a/Back/templates/index.html
+++ b/Back/templates/index.html
@@ -4,7 +4,7 @@
 {% block contenido %}
 {% if user.is_authenticated%}
 <div class="bienvenido">
-    <a class="usuario">Bienvenido:<a href="#" class="user"><strong>{{user.username}}</strong></a></a><strong></strong><a class="user" href="{% url 'logout' %}"><img href="{% url 'logout' %}" src="{% static 'images/exito.png' %}"> Cerrar Sesión</a></strong>
+    <a class="usuario">Bienvenido:<a href="#" class="user"><strong>{{user.username}}</strong></a></a><a class="user"> | </a><a class="user" href="{% url 'logout' %}">Cerrar Sesión</a></strong>
 </div>
 <nav class="menu">
     <a href="{% url 'mascotas' %}">Mascotas</a>
