--- a/Back/templates/login.html
+++ b/Back/templates/login.html
@@ -13,7 +13,7 @@
 <form class="login" method="POST">
 <section class="loginContenedor">
     <div>
-        <p class="acceso">Inicia Sesión</p>
+        <p class="acceso">Iniciar Sesión</p>
     </div>
     <div class="usuario">
         <table>
